--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment8001</module>
+    <module>cloud-consumer-order80</module>
+    <module>cloud-api-commons</module>
   </modules>
 
   <packaging>pom</packaging><!-- 这里添加，注意不是jar或war -->
@@ -24,6 +26,7 @@
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+    <hutool-all>5.1.0</hutool-all>
   </properties>
 
   <!-- 子模块继承之后，提供作用：
@@ -37,6 +40,12 @@
         <version>2.2.2.RELEASE</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>cn.hutool</groupId>
+        <artifactId>hutool-all</artifactId>
+        <version>${hutool-all}</version>
       </dependency>
       <!--spring cloud Hoxton.SR1-->
       <dependency>
@@ -93,6 +102,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.2.6.RELEASE</version>
         <configuration>
           <fork>true</fork>
           <addResources>true</addResources>
