--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>cloud-eureka-server7001</module>
     <module>cloud-eureka-server7002</module>
     <module>cloud-provider-payment8002</module>
+      <module>cloud-provider-payment8006</module>
   </modules>
 
   <packaging>pom</packaging><!-- 这里添加，注意不是jar或war -->
